fix missing posts on mobile

--- a/assets/custom_styles.css
+++ b/assets/custom_styles.css
@@ -163,47 +163,3 @@ img {
   background: linear-gradient(to right, pink, red, orange, yellow, green, blue, indigo, violet);
   z-index: 1; /* Ensure it displays above other background elements */
 }
-
-
-
-/* mobile settings */
-
-.site-nav {
-  z-index: 1; /* Ensure it displays above other background elements */
-}
-
-@media (max-width: 768px) {
-  /* Example breakpoint for tablets and below, adjust as needed */
-  .text h2 {
-    font-size: 1.5rem; /* Adjust to a smaller size for mobile */
-  }
-}
-
-@media (max-width: 768px) {
-  .home article p {
-    display: none; /* This would hide paragraphs, check selectors in your code */
-  }
-  
-  /* Ensure this selector doesn't hide the year if it's a specific element */
-  .post-date {
-    display: block; /* Revert display to block to ensure visibility */
-  }
-}
-
-.overlay-container:hover .overlay,
-.overlay-container:focus .overlay,
-.overlay-container:active .overlay {
-  opacity: 1;
-}
-
-.overlay-container:hover .text,
-.overlay-container:focus .text,
-.overlay-container:active .text {
-  opacity: 1;
-}
-
-.overlay-container.active .overlay,
-.overlay-container.active .text {
-  opacity: 1;
-  transition: opacity 0.3s ease; /* Smooth transition */
-}
